03.04.2006
Changes by Nuno Ramiro
	- Updated: Removed some files from makefile (still need to add Font.h/cpp and FontManager.h/cpp)

02.04.2006
Changes by Florian Fischer (SiENcE)
	-Updated: Dev-cpp solution.

02.04.2006
Changes by Nuno Ramiro
	- Fixed: A bug with Container (Necromancer book was empty and probably other stuff bugged).
	- Rewritten: Font system has been rewritten from scratch.	
	- Removed: Debug Outputs.
	- Added: Copyright/GPL stuff under new files.

01.04.2006
Changes by Nuno Ramiro
	- Fixed: Crash bug (ImageArt).
	- Refactoring: ImageArt & Container.
	- Removed: SetLight() from SDLScreen, was not beeing used.

01.04.2006
Changes by Florian Fischer (SiENcE)
	- Fixed: Soundbug fixed (now you can play soundeffects independent from music)
	- Added: check if sound is enabled, otherwise Iris crashes if sound is off and server sends sound packet
	- Needs Fixing: if mp3 is 0 midi should be played -> don't work!
	- Added: displaying of Elf Paperdolls
	- Added: paperdoll support for Lord_British aso. (we should receive this from granny_aos.xml)
	- Fixed: corrected constants.csl

31.03.2006
Changes by Nuno Ramiro
	- Fixed: More memory leaks under MapBlock3D (FPS Improvement).
	- Fixed: Linux compatibility.
	- Fixed: Memory leak under grnbones and grnanim.
	- Fixed: Particle Effect crash bug (iterator going out of scope).
	- Fixed: Memory leaks under Textures (FPS Improvement).

30.03.2006
Changes by Florian Fischer (SiENcE)
	- Changed: tooltip position
	- Changed: api_net_selectchar in cslhandler.cpp
	- Changed: login procedure
	- Added: cClient::Get_Local_IP() for Send_SelectChar packet
	- Added: Mix_HookMusic(NULL, NULL) in Music.cpp

28.03.2006
Changes by Nuno Ramiro
	- Fixed: Client crash.
	- Changed: Small changes under Client (packets).
	- Fixed: Sound has been fixed.
	- Fixed: Light bug created by the last patch.

27.03.2006
Changes by Nuno Ramiro
	- Fixed: Memory leak under ArtLoader.
	- Fixed: Memory leak under MotiveBasedLight.

26.03.2006